# dfine-cpp

./: .clang-format  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  build.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  oracle.yml
apps/: cli_helpers.hpp  dfine_bench.cpp  dfine_build.cpp  dfine_capi_parity.cpp  dfine_capi_smoke.c  dfine_coco_eval.cpp  dfine_detect.cpp  dfine_inspect.cpp  dfine_smoke.cpp  image_io.cpp  image_io.hpp
cmake/: FindTensorRT.cmake  cuda_host_ccbin.sh  dfineConfig.cmake.in
docs/: BENCHMARKS.md  CONVERSION.md  GETTING_STARTED.md  HANDOFF.md  NAMING.md  RELEASE_CHECKLIST.md  RESEARCH_MATRIX.md  ROADMAP.md  RUNTIME.md  TROUBLESHOOTING.md  VALIDATION.md
docs/impl/: DFINE_SEG_TRT_BUG_REPORT.md  M0_STATUS.md
docs/releases/: UNRELEASED.md  v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.3.1.md  v0.3.2.md  v0.3.3.md  v0.4.0.md  v0.5.0.md
docs/reports/: v0.5.0-preset-evaluation.md
examples/: README.md  cpp_detector_example.cpp  python_quickstart.ipynb
examples/consumer/: CMakeLists.txt
include/dfine/: c_api.h  version.hpp
include/dfine/core/: coco_classes.hpp  engine_meta.hpp  log.hpp  postprocess.hpp  types.hpp
include/dfine/tasks/: detector.hpp
python/: README.md  build_wheel.sh  pyproject.toml  setup.py
python/dfine/: __init__.py  _ffi.py  cli.py  detector.py
python/tests/: conftest.py  test_accuracy_chain.py  test_build_wheel_atomicity.py  test_builder_sidecars.py  test_bundled_model.py  test_cli_cache.py  test_cli_doctor.py  test_cli_export.py  test_cli_json.py  test_coco_eval_decode.py  test_coco_metrics.py  test_detector.py  test_eval_cli_args.py  test_eval_contract.py  test_evaluation_report.py  test_export_checkpoint.py  test_export_postconditions.py  test_ffi_loader.py  test_preset_sweep.py  test_publish_atomicity.py  test_release_assets.py  test_validation_report.py  test_verify_engine.py  test_version_consistency.py  test_yolo_to_coco.py
src/c_api/: c_api.cpp
src/core/: cuda_preprocess.cu  decode_gpu.cu  engine_meta.cpp  failpoint.cpp  log.cpp  postprocess.cpp  trt_session.cpp
src/internal/: cuda_check.hpp  cuda_preprocess.cuh  cuda_raii.hpp  decode_gpu.cuh  device_arena.hpp  engine_meta_detail.hpp  failpoint.hpp  image_check.hpp  trt_logger.hpp  trt_session.hpp
src/tasks/: detector.cpp
tests/: CMakeLists.txt  test_detector_options.cpp  test_detector_recovery.cpp  test_engine_meta.cpp  test_image_layout.cpp  test_postprocess.cpp  test_shape_transitions.cpp  testing.hpp
trt-files/: DFINE_SEG_REVISION
trt-files/dfine_model/: __init__.py  common.py  configs.py  dfine_decoder.py  hgnetv2.py  hybrid_encoder.py  model.py  utils.py
trt-files/scripts/: accuracy_chain.py  build_engine.py  coco_eval.py  coco_metrics.py  compare_export_backends.py  convert_fp16.py  convert_fp16_surgical.py  convert_int8.py  cpp_coco_eval.py  cuda_env.py  eval_contract.py  evaluation_report.py  export_dfine_onnx.py  letterbox_eval.py  make_demo_gif.py  overnight_bench.sh  parity_check.py  preset_sweep.py  profile.py  release_assets.py  remote_bench_full.sh  remote_matrix.sh  seg_export_repro.py  validation_report.py  verify_engine.py  yolo_to_coco.py
trt-files/scripts/experiments/: README.md  export_dynamo_op19.py  spike_explicit_deform.py
