# Unified Python environment for the D-FINE-cpp helper scripts (export / engine-build /
# convert / eval / profile). Managed with uv:
#
#   uv sync --frozen --extra gpu                     # scripts env (needs an NVIDIA GPU + CUDA 12)
#   uv sync --frozen --extra gpu --extra torch       # + the checkpoint-export chain
#   uv sync --frozen --extra gpu --extra torch --group release  # + release tests/build
#   uv sync --frozen                                 # ONNX-graph tooling only (no GPU wheels)
#
# uv.lock pins the Python toolchain. The bundled model implementation records its
# upstream revision in trt-files/DFINE_SEG_REVISION.
#
# Requirements and failure modes: docs/CONVERSION.md and docs/TROUBLESHOOTING.md.
#   • TensorRT 10.13 and the matching CUDA-12 runtime must be present. The
#     `tensorrt-cu12` package supplies the Python API and runtime libraries.
#   • onnxruntime-gpu is pinned to the validated CUDA-12 build.
#   • The ONNX checkpoint exporter uses the detection-only model sources bundled
#     under trt-files/dfine_model.
[project]
name = "dfine-cpp-tools"
version = "0.5.0"
description = "Export / build / convert / eval / profile scripts for the D-FINE-cpp TensorRT runtime"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "numpy",
    "onnx>=1.16",
    "onnxconverter-common>=1.14",
    "onnxsim>=0.4.36",
    "pycocotools>=2.0.7",
    "opencv-python-headless>=4.9",
]

[project.optional-dependencies]
cpu = []                                              # ONNX-graph tooling works with the base deps
gpu = [
    "onnxruntime-gpu==1.24.4",                        # CUDA-12 wheel (NOT 1.27 = CUDA-13)
    "tensorrt-cu12==10.13.*",
    "socksio",                                        # SOCKS proxy for HF weight downloads
]
# Export and evaluation use the bundled model. The additional packages support the
# pinned upstream differential gate and historical conversion reproducers.
torch = ["torch==2.9.1", "torchvision==0.24.*", "loguru", "scipy"]

[dependency-groups]
release = ["build>=1", "pytest>=7", "pillow>=9"]

[tool.uv]
# The locked torch/torchvision wheels come from the CUDA 12.8 index.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]        # import sorting
ignore = ["E402"]            # scripts intentionally set sys.path before some imports

[tool.setuptools]
py-modules = []              # this is a scripts collection, not an importable package
