# Python bindings for D-FINE-cpp. Pure-Python ctypes wrapper over libdfine.so
# (the stable C ABI in include/dfine/c_api.h). The native library is discovered
# at runtime (DFINE_LIBRARY env, bundled next to the package, or the dev
# build/ tree); a wheel additionally bundles libdfine.so via package-data.
#
#   pip install -e ".[dev]"        # editable, for running the tests
#   pytest tests                   # needs a GPU + engine + LD_LIBRARY_PATH (see README)
[build-system]
# >=77: PEP 639 SPDX string for project.license.
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dfine"
version = "0.3.1"
description = "Python bindings for D-FINE-cpp — C++/TensorRT D-FINE object detection"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
dependencies = ["numpy>=1.21"]

[project.scripts]
dfine = "dfine.cli:main"

[project.optional-dependencies]
# TensorRT is not redistributable and is CUDA/arch-specific; declare it as an
# extra rather than vendoring it. The user's local TRT 10.13 + CUDA 12 must match
# the engine's build.
tensorrt = ["tensorrt==10.13.*"]
cli = ["pillow>=9"]
dev = ["pytest>=7", "pillow>=9"]

# Discovery instead of a hard list: dfine/_scripts (the wheel-bundled
# build_engine.py snapshot) exists only after build_wheel.sh copies it in, so
# listing it statically would break editable installs from a fresh checkout.
[tool.setuptools.packages.find]
include = ["dfine", "dfine._scripts"]

[tool.setuptools.package-data]
# Present only when a build step copies the compiled library into the package
# before `pip wheel` (see docs; the .so is CUDA/arch/TRT-specific).
dfine = ["*.so", "*.so.*", "lib/*.so", "lib/*.so.*", "_scripts/*.py"]

[tool.ruff]
line-length = 100
